--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="css/styles.css" type="text/css"
-    rel="stylesheet" />
+    <title>Bikers Against Child Abuse</title>
+    <link rel="stylesheet"   href="styles.css">
   </head>
   <body>
-
+    <h1> <img src="images/logo.jpg" alt="B.A.C.A. Logo" class="logo"> </h1>
+    <nav>
+            <a href="index.html">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">UPDATES</a>
+            <a href="#">CONTACT</a>
+            <a href="#">DONATE</a>
+        </nav>
+    <img src="images/bikerwchildren.jpg" alt="Biker from BACA letting children
+    sit on motorcycle" class="child" >
   </body>
 </html>
