added another image

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       </div>
       <p class="info"> tiam a pulvinar lectus. Nullam facilisis metus velit. Sed nulla ligula, interdum eget lacinia eu, feugiat ac massa.
         Proin sollicitudin ex nisl, at tincidunt est sollicitudin nec. Donec ac sodales nunc. Nunc placerat congue lectus, nec rhoncus elit pulvinar eget.
-        Phasellus a lorem felis.
-         </p>
+        Phasellus a lorem felis.</p>
          <div class="container">
          <iframe class="responsive-iframe" src="https://www.youtube.com/embed/tuF3WqJUMKc" </iframe></div>
-
-
-    </div>
+    <div class="shout">
+      <h1> Biker of the Month!</h1>
+      <h2> Dan Lowes</h2>
+      <h3> Get to know Dan's story on why he became part of the B.A.C.A. Group!</h3> </div>
   </body>
 </html>
