--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <div class="shout">
       <h1> Biker of the Month!</h1>
       <h2> Dan Lowes</h2>
-      <h3> Get to know Dan's story on why he became part of the B.A.C.A. Group!</h3> </div>
+      <p> Get to know Dan's story on why he became part of the B.A.C.A. Group!</p> </div>
   </body>
 </html>
