added font. fixed margins and padding

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Bikers Against Child Abuse</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet"   href="styles.css">
     <link rel="stylesheet" href="styles.css" media="screen and (max-width: 700px)">
     <link rel="stylesheet" href="that.css" media="screen and (max-width: 1200px)">
@@ -22,11 +25,10 @@
       <h2> "B.A.C.A Saved My Life!" </h1>
       <p class="credits"> -Sarah Dean, 2020</p>
       </div>
-      <p class="info"> tiam a pulvinar lectus. Nullam facilisis metus velit. Sed nulla ligula, interdum eget lacinia eu, feugiat ac massa.
-        Proin sollicitudin ex nisl, at tincidunt est sollicitudin nec. Donec ac sodales nunc. Nunc placerat congue lectus, nec rhoncus elit pulvinar eget.
-        Phasellus a lorem felis.</p>
-         <div class="container">
-         <iframe class="responsive-iframe" src="https://www.youtube.com/embed/tuF3WqJUMKc" </iframe></div>
+      <p class="info"> They gave me peace of mind. They helped me gain back my confidence.
+      They helped me live again during a time that I felt worthless. B.A.C.A. understood what I was
+    feeling and knew how to help me regain my power to fight the demons that was inside of myself.</p>
+
     <div class="shout">
       <h1> Biker of the Month!</h1>
       <h2> Dan Lowes</h2>
