media q and photo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet"   href="styles.css">
-    <link rel="stylesheet" href="styles.css" media="screen and (max-width: 700px)">
-    <link rel="stylesheet" href="that.css" media="screen and (max-width: 1200px)">
+    <link rel="stylesheet" href="styles.css" media="screen and (max-width: 600px)">
+    <link rel="stylesheet" href="styles.css" media="screen and (min-width: 900px)">
+    <link rel="stylesheet" href="styles.css" media="screen and (max-width: 1200px)">
   </head>
   <body>
     <h1> <img src="images/logo.jpg" alt="B.A.C.A. Logo" class="logo"> </h1>
@@ -33,5 +34,7 @@
       <h1> Biker of the Month!</h1>
       <h2> Dan Lowes</h2>
       <p> Get to know Dan's story on why he became part of the B.A.C.A. Group!</p> </div>
+
+    <img src="images/biker.jpg" alt="A memeber from B.A.C.A." class="biker" >
   </body>
 </html>
