--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet"   href="styles.css">
-    <link rel="stylesheet" href="styles.css" media="screen and (max-width: 600px)">
-    <link rel="stylesheet" href="styles.css" media="screen and (min-width: 900px)">
+    <link rel="stylesheet" href="styles.css" media="screen and (max-width: 667px)">
     <link rel="stylesheet" href="styles.css" media="screen and (max-width: 1200px)">
   </head>
   <body>
@@ -36,5 +35,21 @@
       <p> Get to know Dan's story on why he became part of the B.A.C.A. Group!</p> </div>
 
     <img src="images/biker.jpg" alt="A memeber from B.A.C.A." class="biker" >
+
+    <div class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tuF3WqJUMKc" frameborder="0" allow="accelerometer; autoplay;
+    clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+    <div class="footer">
+      <footer>
+        <p>Bikers Against Child Abuse&reg; <br>
+  <a href=""</a></p>
+      </footer>
+    <div class="facebook">
+  <footer> <a href="https://www.facebook.com/BikersAgainstChildAbuseInternational/">
+  <img src="images/face.png" alt="HTML tutorial" style="width:35px;height:35px;"></a></footer></div>
+    <div class="youtube">
+      <footer> <a href="https://www.youtube.com/channel/UCOWsz-srZNb0oTitpA5Zhlg">
+      <img src="images/you.png" alt="HTML tutorial" style="width:49px;height:39px;"></a></footer>
   </body>
 </html>
