--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet"   href="styles.css">
-    <link rel="stylesheet" href="styles.css" media="screen and (max-width: 667px)">
+    <link rel="stylesheet" href="styles.css" media="screen and (min-width : 375px) and (max-width : 667px)">
     <link rel="stylesheet" href="styles.css" media="screen and (max-width: 1200px)">
   </head>
   <body>
