--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="screen and (min-width : 375px)
+    and (max-width : 667px)" href="css/styles.css" />
     <title>Bikers Against Child Abuse</title>
+    <link href="styles.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" media="screen and (min-width : 375px)
+    and (max-width : 667px)" href="styles.css" />
+    <link rel="stylesheet" media="screen and (min-width : 700px)
+    and (max-width : 1000px)" href="styles.css" />
+
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <link rel="stylesheet"   href="styles.css">
-    <link rel="stylesheet" href="styles.css" media="screen and (min-width : 375px) and (max-width : 667px)">
-    <link rel="stylesheet" href="styles.css" media="screen and (max-width: 1200px)">
+
+
+
   </head>
   <body>
     <h1> <img src="images/logo.jpg" alt="B.A.C.A. Logo" class="logo"> </h1>
