--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/tuF3WqJUMKc" frameborder="0" allow="accelerometer; autoplay;
     clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
-    <div class="footer">
-      <footer>
-        <p>Bikers Against Child Abuse&reg; <br>
+    <footer>
+      <p>Bikers Against Child Abuse&reg; <br>
   <a href=""</a></p>
-      </footer>
-    <div class="facebook">
+
   <footer> <a href="https://www.facebook.com/BikersAgainstChildAbuseInternational/">
-  <img src="images/face.png" alt="HTML tutorial" style="width:35px;height:35px;"></a></footer></div>
+  <img src="images/face.png" alt="HTML tutorial" style="width:35px;height:35px;"></a>
     <div class="youtube">
       <footer> <a href="https://www.youtube.com/channel/UCOWsz-srZNb0oTitpA5Zhlg">
       <img src="images/you.png" alt="HTML tutorial" style="width:49px;height:39px;"></a></footer>
