Started on About Page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <h1> <img src="images/logo.jpg" alt="B.A.C.A. Logo" class="logo"> </h1>
     <nav>
             <a href="index.html">HOME</a>
-            <a href="#">ABOUT</a>
+            <a href="about.html">ABOUT</a>
             <a href="#">UPDATES</a>
-            <a href="#">CONTACT</a>
+            <a href="contact.html">CONTACT</a>
             <a href="#">DONATE</a>
     </nav>
   <main>
@@ -64,7 +64,7 @@
   </main>
 
       <footer>
-        <p>Bikers Against Child Abuse&reg; 2020 </p>
+        <h3>Bikers Against Child Abuse&reg; 2020 </h3>
 			  <a href="https://www.facebook.com/BikersAgainstChildAbuseInternational/">
 			  <img src="images/face.png" alt="HTML tutorial" style="width:35px;height:35px;"></a>
 			  <a href="https://www.youtube.com/channel/UCOWsz-srZNb0oTitpA5Zhlg">
