WebCredit for images

--- a/about.html
+++ b/about.html
@@ -43,12 +43,13 @@
 
   </div><!--review-->
   <div class="review">
+    <div class="leftone">
       <h1>How does B.A.C.A. work?</h1>
       <p>B.A.C.A. International, Inc. (B.A.C.A.) is organized with a central contact person to receive calls from referring agencies and individuals. A recognized, authorized agency with which the child has had contact determines that the child is still frightened by his or her environment. The agency representative contacts B.A.C.A., or refers the individual to contact B.A.C.A. and the name and address of the child is given to our B.A.C.A./Child Liaison. The Liaison verifies that the case has been reported and the authorities have been contacted, and the case in being processed within the system. The Liaison contacts the family and an initial ride is organized to meet the child at their home or in some other location where the child will feel comfortable. The B.A.C.A. chapter rides to meet the child and he/she is given a vest with a B.A.C.A. patch sewn on the back. The child is free to wear the vest or not, and we support their decision. The child is also given bumper stickers, and other gifts that are generally donated by the public. These initial visits generally last about a half an hour.
       </p>
 <p> Following this initial contact, the child is given the name and number of two B.A.C.A. Members residing geographically closest to them, who then become the child’s primary contacts. Prior to becoming the primary contacts for the child, the bikers are cleared for participation by passing an extensive background check, have ridden with the Chapter for at least a year, and have received special instructions from the Licensed Mental Health Professional. Anytime the child feels scared and feels the need for the presence of his new B.A.C.A. family, the child may call upon these bikers to go to the child’s house and provide the necessary reassurance to feel safe and protected. B.A.C.A. Members and supporters also support the children by: providing escorts for them if they feel scared in their neighborhoods; riding by their homes on a regular basis; supporting the children at court and parole hearings; attending their interviews, and; staying with the children if they are alone and frightened. The B.A.C.A. Members never go to the child’s house alone and never without the knowledge or permission of the parents. Our Mission is not to be permanently engaged as the childs power. Our Mission is to help the children and their families learn how powerful they can be. Our presence will be available as long as the child needs us. B.A.C.A. also holds other functions for the children such as Bar-B-Ques, and parties.
 </p>
-
+</div>
 	</div><!--review-->
 
   </main>
