--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <h1> <img src="images/logo.jpg" alt="B.A.C.A. Logo" class="logo"> </h1>
+    <!--https://mountainstatesman.com/article/bikers-to-hit-the-streets-to-draw-awareness-to-child-abuse-->
     <nav>
             <a href="index.html">HOME</a>
             <a href="about.html">ABOUT</a>
@@ -37,7 +38,7 @@
 
 		</div><!--left-->
 		<div class="right">
-			<img src="images/bikerwchildren.jpg" alt="Biker from BACA letting children sit on motorcycle" >
+			<img src="images/bikerwchildren.jpg" alt="Biker from BACA letting children sit on motorcycle" > <!--https://syvnews.com/news/local/bikers-against-child-abuse-advocates-spread-their-message-at-lompoc-boys-and-girls-club/article_e438689d-ff17-5e68-a1cf-de7c05bab27e.html-->
 
 		</div><!--right-->
   </div><!--review-->
@@ -53,7 +54,7 @@
       </div>
     <div class="right">
       <h1> Biker of the Month!</h1>
-		  <h2> Randy Jones</h2>
+		  <h2> Randy Jones</h2> <!--https://nara.getarchive.net/media/randy-jones-promotes-bikers-against-child-abuse-baca-during-the-314th-airlift-310055-->
 		  <p> Get to know Randy's story on why he became part of the B.A.C.A. Group!</p>
 			<div class="randyjones">
         <img src="images/randyjones.jpg" alt="A memeber from B.A.C.A.">
