Added another paragraph, fixed left div for the 3rd section of text

--- a/about.html
+++ b/about.html
@@ -49,6 +49,17 @@
       </p>
 <p> Following this initial contact, the child is given the name and number of two B.A.C.A. Members residing geographically closest to them, who then become the child’s primary contacts. Prior to becoming the primary contacts for the child, the bikers are cleared for participation by passing an extensive background check, have ridden with the Chapter for at least a year, and have received special instructions from the Licensed Mental Health Professional. Anytime the child feels scared and feels the need for the presence of his new B.A.C.A. family, the child may call upon these bikers to go to the child’s house and provide the necessary reassurance to feel safe and protected. B.A.C.A. Members and supporters also support the children by: providing escorts for them if they feel scared in their neighborhoods; riding by their homes on a regular basis; supporting the children at court and parole hearings; attending their interviews, and; staying with the children if they are alone and frightened. The B.A.C.A. Members never go to the child’s house alone and never without the knowledge or permission of the parents. Our Mission is not to be permanently engaged as the childs power. Our Mission is to help the children and their families learn how powerful they can be. Our presence will be available as long as the child needs us. B.A.C.A. also holds other functions for the children such as Bar-B-Ques, and parties.
 </p>
+<h1>B.A.C.A. Creed</h1>
+<div class="creditone"> Adapted from “The Fellowship of the Unashamed”</div>
+<p>I am a Member of Bikers Against Child Abuse. The die has been cast. The decision has been made. I have stepped over the line. I won’t look back, let up, slow down, back away, or be still.</p>
+
+<p>My past has prepared me, my present makes sense, and my future is secure. I’m finished and done with low living, sight walking, small planning, smooth knees, colorless dreams, tamed visions, mundane talking, cheap giving, and dwarfed goals.</p>
+
+<p>I no longer need pre-eminence, prosperity, position, promotions, plaudits, or popularity. I don’t have to be right, first, tops, recognized, praised, regarded, or rewarded. I now live by the faith in my works, and lean on the strength of my brothers and sisters. I love with patience, live by prayer, and labor with power.</p>
+
+<p>My fate is set, my gait is fast, my goal is the ultimate safety of children. My road is narrow, my way is rough, my companions are tried and true, my Guide is reliable, my mission is clear. I cannot be bought, compromised, detoured, lured away, turned back, deluded, or delayed. I will not flinch in the face of sacrifice, hesitate in the presence of adversity, negotiate at the table of the enemy, ponder at the pool of popularity, or meander in the maze of mediocrity.</p>
+
+<p>I won’t give up, shut up, let up, until I have stayed up, stored up, prayed up, paid up, and showed up for all wounded children. I must go until I drop, ride until I give out, and work till He stops me. And when He comes for His own, He will have no problem recognizing me, for He will see my B.A.C.A. backpatch and know that I am one of His. I am a Member of Bikers Against Child Abuse, and this is my creed.</p>
 </div>
 	</div><!--review-->
 
