Added Contact Page
Changed text colors. Increased font size, fixed facebook icon, made a contact page. Added an image on contact page

--- a/about.html
+++ b/about.html
@@ -66,7 +66,9 @@
   </main>
 
       <footer>
-        <h3>Bikers Against Child Abuse&reg; 2020 </h3>
+        <div class="foot">
+          <p> Bikers Against Child Abuse&copy; 2020 </p>
+        </div>
 			  <a href="https://www.facebook.com/BikersAgainstChildAbuseInternational/">
 			  <img src="images/face.png" alt="HTML tutorial" style="width:35px;height:35px;"></a>
 			  <a href="https://www.youtube.com/channel/UCOWsz-srZNb0oTitpA5Zhlg">
