--- a/contact.html
+++ b/contact.html
@@ -27,43 +27,53 @@
   <main>
 
     <div class="review">
-		  <div class="left">
-			  <h2> "B.A.C.A Saved My Life!" </h2>
-			  <p class="credits"> -Sarah Dean, 2020</p>
 
-			  <p class="info"> They gave me peace of mind. They helped me gain back my confidence.
-			  They helped me live again during a time that I felt worthless. B.A.C.A. understood what I was
-			feeling and knew how to help me regain my power to fight the demons that was inside of myself.</p>
+        <div class="container">
+  <div style="text-align:center">
+    <h1>Contact Us</h1>
+    <h3>North American Continental Executive Board</h3>
 
+<p> President: Mouse</p>
+<p> Vice President: Tiburon</p>
+<p> Secretary: M&M</p>
+<p> Security: Mohawk</p>
+<p> Treasurer: Bear</p>
+  </div>
+  <div class="row">
+    <div class="column">
+      <img src="images/gang.jpg" style="width:100%">
+    </div>
+    <div class="column">
+      <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="state">State</label>
+        <select id="state" name="State">
+          <option value="kentucky">Kentucky</option>
+          <option value="indiana">Indiana</option>
+          <option value="tennessee">Tennessee</option>
+        </select>
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="You have any questions for us?" style="height:170px"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</div>
 
-		</div><!--left-->
 		<div class="right">
-			<img src="images/bikerwchildren.jpg" alt="Biker from BACA letting children sit on motorcycle" > <!--https://syvnews.com/news/local/bikers-against-child-abuse-advocates-spread-their-message-at-lompoc-boys-and-girls-club/article_e438689d-ff17-5e68-a1cf-de7c05bab27e.html-->
 
 		</div><!--right-->
   </div><!--review-->
   <div class="review">
 
     <div class="left">
-      <h1>B.A.C.A. Short-film</h1>
-    <div class="shortfilm"
-      <p> Want to know what goes on behind-the-scenes in this organization? Watch this film the memebers put together.</p>
-    </div>
-      <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/tuF3WqJUMKc" frameborder="0" allow="accelerometer; autoplay;
-      clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       </div>
       </div>
-    <div class="right">
-      <h1> Biker of the Month!</h1>
-		  <h2> Randy Jones</h2> <!--https://nara.getarchive.net/media/randy-jones-promotes-bikers-against-child-abuse-baca-during-the-314th-airlift-310055-->
-    <div class="randy">
-      <p> Get to know Randy's story on why he became part of the B.A.C.A. Group!</p>
-    </div>
-			<div class="randyjones">
-        <img src="images/randyjones.jpg" alt="A memeber from B.A.C.A.">
-      </div><!--randyjones-->
-    </div><!--right-->
+
 	</div><!--review-->
 
   </main>
